--- a/functions/package.json
+++ b/functions/package.json
@@ -15,14 +15,15 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0",
-    "web3": "^1.5.2"
+    "firebase-functions": "^3.11.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
     "eslint": "^7.6.0",
     "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^0.2.0"
   },
-  "private": true
+  "private": true,
+  "prettier":{
+    "singleQuote": false
+  }
 }
