--- a/functions/package.json
+++ b/functions/package.json
@@ -10,20 +10,24 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "12"
+    "node": "14"
   },
   "main": "index.js",
   "dependencies": {
+    "cors": "^2.8.5",
+    "eslint-plugin-promise": "^5.1.0",
+    "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0"
   },
   "devDependencies": {
-    "eslint": "^7.6.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^0.2.0"
   },
   "private": true,
-  "prettier":{
+  "prettier": {
     "singleQuote": false
   }
 }
