--- a/functions/package.json
+++ b/functions/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
+    "json2csv": "^5.0.6",
     "web3-token": "^0.1.32"
   },
   "devDependencies": {
